# api/v1/docs/swagger.json
@@ -10,7 +10,7 @@
         },
         "version": "1.0"
     },
-    "host": "localhost",
+    "host": "localhost:4000",
     "basePath": "/api/v1/",
     "paths": {
         "/": {
@@ -25,15 +25,46 @@
                 "summary": "Show a hello message",
                 "responses": {
                     "200": {
-                        "description": "Hello world!",
+                        "description": "Return 'Hello from gopi!'",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.HelloResponse"
                         }
                     }
                 }
             }
         },
-        "/board/:uid": {
+        "/boards/new": {
+            "post": {
+                "description": "Create a new board in database.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Boards"
+                ],
+                "summary": "Create new board",
+                "parameters": [
+                    {
+                        "description": "Create board with Title and Description",
+                        "name": "CreateBoardRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.CreateBoardRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.CreateBoardResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/boards/{uid}": {
             "get": {
                 "description": "Return board with unique id",
                 "produces": [
@@ -42,7 +73,16 @@
                 "tags": [
                     "Boards"
                 ],
-                "summary": "Return board with unique id",
+                "summary": "Get board with UUID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Board unique ID",
+                        "name": "uid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -53,27 +93,7 @@
                 }
             }
         },
-        "/board/new": {
-            "post": {
-                "description": "Create a new board",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Boards"
-                ],
-                "summary": "Create a new board",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.Board"
-                        }
-                    }
-                }
-            }
-        },
-        "/user/register": {
+        "/users/register": {
             "post": {
                 "description": "Create new user in database",
                 "consumes": [
@@ -86,11 +106,51 @@
                     "Users"
                 ],
                 "summary": "Create new user",
+                "parameters": [
+                    {
+                        "description": "Create user with Email and Password.",
+                        "name": "RegisterRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.RegisterRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "User succesfully created.",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.RegisterResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/{uid}": {
+            "get": {
+                "description": "Return user with unique id",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Get user with UUID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User unique ID",
+                        "name": "uid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
                         }
                     }
                 }
@@ -102,16 +162,120 @@
             "type": "object",
             "properties": {
                 "created_at": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2024-01-22 17:03:50.283466+00"
+                },
+                "description": {
+                    "type": "string",
+                    "example": "Board description"
                 },
                 "id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 },
                 "title": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Title"
                 },
                 "unique_id": {
+                    "type": "string",
+                    "example": "926e7309-12e4-4c50-824c-33737fb45f8a"
+                }
+            }
+        },
+        "models.CreateBoardRequest": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string",
+                    "example": "My description"
+                },
+                "title": {
+                    "type": "string",
+                    "example": "My title"
+                }
+            }
+        },
+        "models.CreateBoardResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
                     "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.HelloResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.RegisterRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "example": "email@email.com"
+                },
+                "password": {
+                    "type": "string",
+                    "example": "Password123\u0026"
+                }
+            }
+        },
+        "models.RegisterResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.User": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string",
+                    "example": "2024-01-22 17:03:50.283466+00"
+                },
+                "email": {
+                    "type": "string",
+                    "example": "email@email.com"
+                },
+                "first_name": {
+                    "type": "string",
+                    "example": "FirstName"
+                },
+                "id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "last_name": {
+                    "type": "string",
+                    "example": "LastName"
+                },
+                "password": {
+                    "type": "string",
+                    "example": "hash"
+                },
+                "role": {
+                    "type": "string",
+                    "example": "Tester"
+                },
+                "unique_id": {
+                    "type": "string",
+                    "example": "926e7309-12e4-4c50-824c-33737fb45f8a"
                 }
             }
         }
