# api/v1/handlers/user.go
@@ -1,18 +1,39 @@
 package handlers
 
 import (
+	"net/http"
+
 	"github.com/bodatomas/gopi/api/v1/models"
 	"github.com/bodatomas/gopi/utils"
 	"github.com/gofiber/fiber/v2"
 )
+
+// @Summary      Get user with UUID
+// @Description  Return user with unique id
+// @Tags         Users
+// @Produce      json
+// @Param 		 uid path string true "User unique ID"
+// @Success      200  {object}  models.User
+// @Router       /users/{uid} [get]
+func HandleGetUserByID(c *fiber.Ctx) error {
+	// Get id param from url
+	id := c.Params("uid")
+	// Get user from database
+	data, err := models.GetUserByID(id)
+	if err != nil {
+		return c.JSON(fiber.Map{"status": http.StatusNotFound})
+	}
+	return c.JSON(data)
+}
 
 // @Summary      Create new user
 // @Description  Create new user in database
 // @Tags         Users
 // @Accept		 json
 // @Produce      json
-// @Success      200  {string} 	"User succesfully created."
-// @Router       /user/register [post]
+// @Param		 RegisterRequest body models.RegisterRequest true "Create user with Email and Password."
+// @Success      200  {object} models.RegisterResponse
+// @Router       /users/register [post]
 func HandleRegisterUser(c *fiber.Ctx) error {
 	// Validate user input (email, password)
 	registerInput, err := utils.CheckValidRegistrationInput(c)
@@ -39,7 +60,9 @@ func HandleRegisterUser(c *fiber.Ctx) error {
 	}
 
 	// Return a success message
-	return c.Status(fiber.StatusAccepted).JSON(fiber.Map{
-		"success": "User successfully created",
-	})
+	response := models.RegisterResponse{
+		Status:  fiber.StatusAccepted,
+		Message: "User successfully created",
+	}
+	return c.JSON(response)
 }
