# api/v1/models/hello.go
@@ -1,0 +1,6 @@
+package models
+
+type HelloResponse struct {
+	Status   int    `json:"status"`
+	Messsage string `json:"message"`
+}
